--- a/mystyle.css
+++ b/mystyle.css
@@ -3,27 +3,93 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: black;
 }
 
 p {
+    font-size: 1.5rem;
+    color: white;
+    margin-right: 70px;
+    margin-left: 70px;
+}
+
+h2 {
     font-size: 2rem;
+    margin: 25px;
+    color: black;
+    text-shadow: -1px -1px white,
+    1px -1px white,
+    -1px 1px white,
+    1px 1px white;
 }
 
-button {
-    padding: 7px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+h3 {
+    font-size: 4rem;
+    margin: 25px;
+    color: black;
+    text-shadow: -1px -1px white,
+    1px -1px white,
+    -1px 1px white,
+    1px 1px white;
 }
 
-button.blue {
-    background-color: #3498db;
+h4 {
+    font-size: 3.5rem;
+    color: white;
+    text-align: center;
+    margin: 10px;
 }
 
-button.green {
-    background-color: #2ecc71;
+.header {
+    background: url("Images/ForestHeader.jpg");
+    background-size: cover;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px
 }
 
-button.orange {
-    background-color: orangered;
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-around;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    width: 20%;
+    transition: 0.6s;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    scale: 1.1;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    height: 100%;
+}
+
+hr.rounded {
+    border-top: 8px solid #bbb;
+    border-radius: 5px;
 }
