--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,6 @@
 body {
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
     background-color: black;
 }
 
@@ -39,6 +37,8 @@ h4 {
     text-align: center;
     margin: 10px;
     padding-top: 3px;
+    display: flex;
+    justify-content: center;
 }
 
 iframe {
@@ -47,7 +47,7 @@ iframe {
     align-items: center;
     margin: auto;
     width: 90%;
-    height: 100vh;
+    height: 800px;
 }
 
 .header {
@@ -68,7 +68,7 @@ iframe {
     justify-content: space-around;
 }
 
-.topnav a {
+.topnav .nav {
     color: #dddddd;
     text-align: center;
     display: flex;
@@ -80,13 +80,13 @@ iframe {
     transition: 0.6s;
 }
 
-.topnav a:hover {
+.nav:hover {
     background-color: #dddddd;
     color: black;
     scale: 1.1;
 }
 
-.topnav a.active {
+.nav.current {
     background-color: #04AA6D;
     color: #dddddd;
 }
@@ -95,8 +95,7 @@ iframe {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 15px;
-    height: 100%;
+    margin: 15px 15px 15px;
 }
 
 hr.rounded {
@@ -104,3 +103,24 @@ hr.rounded {
     border-radius: 5px;
     width: 90%;
 }
+
+object.inject {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: black;
+}
+
+.main {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.navigationBar {
+    display: flex;
+    justify-content: center;
+}
+
