--- a/mystyle.css
+++ b/mystyle.css
@@ -88,6 +88,26 @@ iframe {
     justify-content: space-around;
 }
 
+.socials {
+    display: flex;
+    justify-content: center;
+}
+
+.socials img {
+    display: flex;
+    width: 150px;
+    height: 150px;
+    margin-top: 25px;
+    margin-right: 50px;
+    margin-left: 50px;
+    object-fit: contain;
+    transition: 0.6s;
+}
+
+.socials img:hover {
+    scale: 1.1;
+}
+
 .topnav .nav {
     color: #dddddd;
     text-align: center;
@@ -96,7 +116,7 @@ iframe {
     align-items: center;
     padding: 10px;
     font-size: 17px;
-    width: 20%;
+    width: 16.66%;
     transition: 0.6s;
 }
 
