--- a/mystyle.css
+++ b/mystyle.css
@@ -91,6 +91,8 @@ iframe {
 .socials {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
+    margin-top: 75px;
 }
 
 .socials img {
@@ -150,6 +152,8 @@ hr.rounded {
     border-top: 8px solid #a3a3a3;
     border-radius: 5px;
     width: 90%;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 object.inject {
@@ -172,3 +176,20 @@ object.inject {
     justify-content: center;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    background-color: #a3a3a3;
+    padding: 10px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+}
+
+.grid-item {
+    background-color: black;
+    border: 1px solid #dddddd;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    color: #dddddd;
+}
