--- a/mystyle.css
+++ b/mystyle.css
@@ -125,7 +125,6 @@ iframe {
 .nav:hover {
     background-color: #dddddd;
     color: black;
-    scale: 1.1;
 }
 
 .current {
@@ -192,4 +191,64 @@ object.inject {
     font-size: 30px;
     text-align: center;
     color: #dddddd;
+}
+
+/* The dropdown container */
+.dropdown {
+    float: left;
+    overflow: hidden;
+    width: 16.66%;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: #dddddd;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+    width: 100%;
+    height: 100%;
+    transition: 0.6s;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #dddddd;
+    color: black;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #dddddd;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    transition: 0.2s;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: grey;
+    color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+    color: black;
 }
