--- a/mystyle.css
+++ b/mystyle.css
@@ -86,6 +86,8 @@ iframe {
     background-color: #333;
     display: flex;
     justify-content: space-around;
+    max-height: 75px;
+    height: 75px;
 }
 
 .socials {
@@ -195,8 +197,6 @@ object.inject {
 
 /* The dropdown container */
 .dropdown {
-    float: left;
-    overflow: hidden;
     width: 16.66%;
 }
 
@@ -206,13 +206,14 @@ object.inject {
     border: none;
     outline: none;
     color: #dddddd;
-    padding: 14px 16px;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
     width: 100%;
     height: 100%;
+    padding: 10px;
     transition: 0.6s;
+    cursor: pointer;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
@@ -223,9 +224,9 @@ object.inject {
 /* Dropdown content (hidden by default) */
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #dddddd;
-    width: 13.7%;
+    width: 100%;
     z-index: 1;
 }
 
