--- a/mystyle.css
+++ b/mystyle.css
@@ -61,13 +61,29 @@ h4 {
     justify-content: center;
 }
 
-iframe {
+#youtubeLink {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
     width: 90%;
-    height: 800px;
+    height: 600px;
+}
+
+#duckStore {
+    width: 90%;
+    height: 190px;
+    border: none;
+    justify-content: center;
+    display: flex;
+}
+
+#duckStoreMain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .header {
@@ -232,7 +248,6 @@ object.inject {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
