--- a/mystyle.css
+++ b/mystyle.css
@@ -312,3 +312,44 @@ object.inject {
     display: block;
     color: black;
 }
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    margin: auto;
+}
+
+.mySlides {
+    display: none;
+    opacity: 1;
+}
+
+.mySlides.in {
+    display: block;
+}
+
+.mySlides img {
+    width: 100%;
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: relative;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
+}
